--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
+DATABASE_URL=postgresql+asyncpg://neondb_owner:npg_AhV8b1OQjLTe@ep-lingering-hill-a8cmqqo6-pooler.eastus2.azure.neon.tech/neondb
